entrega do site
finalização do visual do site e a adição de links o esqueleto da newsletter

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
     <head>
 		<title> JoJo's Bizarre Adventure </title>
 		<link rel='stylesheet' type='text/css' href='./index.css'>
-        <link rel="icon" href="./icones/circle.png">
+        <link rel="icon" href="./icones/circle-jojo.png">
         <script src="./index.js"></script>
         <meta charset='utf-8'>
     </head>
     <body>
         <div id="cabecalho">
             <span id="logo-site">
-                <a href="#secaoinicial"> <img src="./icones/title-site.png"> </a>
+                <a href="#secaoinicial"> <img src="./titles/site.png"> </a>
             </span>
             <div id="links-pts">
                 <span>
@@ -58,7 +58,7 @@
         <div id="secaoinicial"></div>
 
         <div id="secaoinicialintro"> <br> <br> <br>
-            <img src="./icones/title-site.png"> <br> <br> <br> 
+            <img src="./titles/site.png"> <br> <br> <br> 
                 JoJo's Bizarre Adventure (JoJo no Kimyō na Bōken) (muitas vezes abreviado para JoJo ou abreviado como JJBA) é um mangá shonen e seinen escrito e ilustrado
             por Hirohiko Araki. JoJo foi serializado na Weekly Shonen Jump de 1986 até 2004, quando então foi transferido para a revista mensal Seinen Ultra Jump, onde a história atual continua. <br> <br>
                 O gênero de JoJo abrange Ação, Aventura, Sobrenatural, Suspense, Comédia, Tragédia, Mistério, Slice of Life e Horror. Talvez seja mais popularmente conhecido
@@ -71,7 +71,7 @@
 
         <div id="secaopt1">
             <img id="capa" src="./planos/pb1.png"> <br> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-pb.png"> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/pb.png"> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 A primeira parte, Phantom Blood, ambientada na Inglaterra em 1880, segue Jonathan Joestar enquanto ele amadurece e eventualmente combate seu irmão adotivo, o astuto e impiedoso Dio Brando,
                 que se torna um vampiro com a ajuda de uma antiga Máscara de Pedra. Jonathan é treinado por Will Anthonio Zeppeli na vibrante energia do Hamon, empunhada no corpo humano e transferida em
@@ -81,7 +81,7 @@
 
         <div id="secaopt2">
             <img id="capa" src="./planos/bt1.png"> <br> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-bt.png"> <br> <br> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/bt.png"> <br> <br> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 A segunda parte, Battle Tendency, mostra o neto de Jonathan, Joseph Joestar, cruzando o mundo nos dias que antecederam a Segunda Guerra Mundial em 1938 para combater os Homens do Pilar,
                 uma antiga raça de seres hostis responsáveis pela criação da Máscara de Pedra. Assim como seu avô, Joseph passa por um extenuante treinamento Hamon ao lado de César Anthonio Zeppeli,
@@ -91,7 +91,7 @@
 
         <div id="secaopt3">
             <img id="capa" src="./planos/sc3.png"> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-sc.png"> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/sc.png"> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 A terceira parte, Stardust Crusaders, se passa durante 1988-1989, quando o neto de Joseph, Jotaro Kujo, viaja junto com Joseph, Muhammad Avdol, Noriaki Kakyoin, Jean Pierre Polnareff e Iggy
                 de Tóquio até Cairo para lutar contra DIO que retornou das profundezas do mar e salvar sua mãe da influência mística de DIO. A partir de agora, aliados e vilões usam principalmente Stands, uma
@@ -101,7 +101,7 @@
 
         <div id="secaopt4">
             <img id="capa" src="./planos/diu4.png"> <br> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-diu.png"> <br> <br> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/diu.png"> <br> <br> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 A quarta parte Diamond is Unbreakable se passa na cidade fictícia de Morioh, no Japão, em 1999. Segue o filho ilegítimo de Joseph, Josuke Higashikata, enquanto ele conhece amigos e inimigos
                 entre uma série de novos usuários de Stand dentro da população de Morioh criados com os poderosos Arco e Flecha, dois itens que deram a DIO seu Stand. Ele, Okuyasu Nijimura, Koichi Hirose,
@@ -111,7 +111,7 @@
 
         <div id="secaopt5">
             <img id="capa" src="./planos/va2.png"> <br> <br> <br> <br> 
-            <img id="titulo" src="./icones/title-va.png"> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/va.png"> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 Na quinta parte, Vento Aureo (também referida como Golden Wind), ambientada na Itália em 2001, o filho de DIO, Giorno Giovanna, luta para chegar ao topo da Passione, a gangue mais poderosa da
                 Itália, enquanto planeja derrubar o misterioso chefe da gangue para proteger a população civil do tráfico de drogas da quadrilha. Para fazer isso, ele coopera com o membro da gangue Bruno Bucciarati
@@ -122,7 +122,7 @@
 
         <div id="secaopt6">
             <img id="capa" src="./planos/so1.jpg"> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-so.png"> <br> <br> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/so.png"> <br> <br> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 A sexta parte, Stone Ocean, se passa em 2011, quando a filha de Jotaro, Jolyne Cujoh, é acusada de assassinato e presa na Green Dolphin Street Prison. Jotaro então tem suas memórias e Stand
                 roubados pelo Stand Whitesnake após uma tentativa de libertar Jolyne. Ela então decide ficar presa para descobrir quem é o usuário de Whitesnake e o que ele planeja fazer com as memórias e
@@ -132,7 +132,7 @@
 
         <div id="secaopt7">
             <img id="capa" src="./planos/sbr3.jpg"> <br> <br> <br> <br> 
-            <img id="titulo" src="./icones/title-sbr.png"> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/sbr.png"> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 Situado em 1890 nos Estados Unidos, Steel Ball Run segue uma corrida pelo continente dos Estados Unidos da América. A corrida é chamada de Corrida de Cavalos Steel Ball Run e tem o nome do
                 patrocinador, Steven Steel. Os protagonistas são Gyro Zeppeli, um mestre da técnica única de Spin buscando o prêmio em dinheiro e Johnny Joestar, um ex-jóquei paraplégico que busca curar suas
@@ -143,7 +143,7 @@
 
         <div id="secaopt8">
             <img id="capa" src="./planos/jjl4.jpg"> <br> <br> <br> <br> <br>
-            <img id="titulo" src="./icones/title-jjl.png"> <br> <br> <br> <br> <br> <br> <br>
+            <img id="titulo" src="./titles/jjl.png"> <br> <br> <br> <br> <br> <br> <br>
             <div id="texto"> <br>
                 Saltando para 2011, em JoJolion, a estudante universitária Yasuho Hirose descobre um homem amnésico provisoriamente chamado de "Josuke" em Morioh após o (então contemporâneo) terremoto do Grande
                 Leste do Japão. Ambos então decidem investigar a identidade passada de Josuke, inicialmente considerada a do médico do navio Yoshikage Kira, e as circunstâncias de sua presença na cidade, deixando-o
@@ -152,10 +152,26 @@
             <br> <br> </div>
         </div>
 
-        <div id="secaolinks"> <br> <br> <br>
-            <img src="./icones/title-links.png"> <br> <br> <br>
-            links daora mais sobre jojo
-        </div>
+        <div id="secaofinal">
+            <img src="./titles/links.png" height="1px">
+            <div id="secaolinks"> <br> <br> <br>
+                <img id="#links" src="./titles/links.png"> <br> <br> <br>
+                <table>
+                    <tr>
+                        <td> <a href="https://jojowiki.com/" target="_blank"> <img src="./logos/jojo-wiki.png" height="150px"/> </a> </td>
+                        <td> <a href="#https://www.crunchyroll.com/pt-br/series/GYP8DP1MY/jojos-bizarre-adventure" target="_blank"> <img src="./logos/crunchyroll.png" height="150px"/> </a> </td>
 
+                        <td> <a href="https://www.netflix.com/br/title/80179831" target="_blank"> <img src="./logos/netflix.png" height="100px"/> </a> </td>
+                        <td> <a href="#davidproduction.jp/index.html" target="_blank"> <img src="./logos/david-pro.png" height="100px"/> </a> </td>
+                    </tr>
+                </table> <br> <br>
+                Newsletter! <br> <br>
+                <form onSubmit="return verifEmail(document.getElementById('txtEmail').value);">
+                    Inscreva-se agora na nossa newsletter e receba as novidades sobre JoJo em primeira mão! <br> <br>
+                    E-mail: <input type='text' name='txtEmail' id='txtEmail' placeholder='meuemail@provedor.com' size="30">
+                    <input type='submit' value='Inscrever-se'>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
