--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 <table>
                     <tr>
                         <td> <a href="https://jojowiki.com/" target="_blank"> <img src="./logos/jojo-wiki.png" height="150px"/> </a> </td>
-                        <td> <a href="#https://www.crunchyroll.com/pt-br/series/GYP8DP1MY/jojos-bizarre-adventure" target="_blank"> <img src="./logos/crunchyroll.png" height="150px"/> </a> </td>
+                        <td> <a href="https://www.crunchyroll.com/pt-br/series/GYP8DP1MY/jojos-bizarre-adventure" target="_blank"> <img src="./logos/crunchyroll.png" height="150px"/> </a> </td>
 
                         <td> <a href="https://www.netflix.com/br/title/80179831" target="_blank"> <img src="./logos/netflix.png" height="100px"/> </a> </td>
-                        <td> <a href="#davidproduction.jp/index.html" target="_blank"> <img src="./logos/david-pro.png" height="100px"/> </a> </td>
+                        <td> <a href="davidproduction.jp/index.html" target="_blank"> <img src="./logos/david-pro.png" height="100px"/> </a> </td>
                     </tr>
                 </table> <br> <br>
                 Newsletter! <br> <br>
